# apertium-tgk-pes

./: .gitattributes  AUTHORS  ChangeLog  Makefile.am  README  TODO  apertium-tg-fa.fa-tg.t1x  apertium-tg-fa.fa.dix  apertium-tg-fa.fa.dix.xml  apertium-tg-fa.fa.metadix  apertium-tg-fa.post-tg.dix.xml  apertium-tg-fa.symbols.xml  apertium-tg-fa.tg-fa.alpha.dix  apertium-tg-fa.tg-fa.dix  apertium-tg-fa.tg-fa.dix.xml  apertium-tg-fa.tg-fa.t1x  apertium-tg-fa.tg.dix  apertium-tg-fa.tg.dix.xml  apertium-tg-fa.tg.tsx  apertium-tg-fa.translit-tg@Latn.dix  apertium-tg-fa.translit.dix  apertium-tgk-pes.pes-tgk.t1x  apertium-tgk-pes.pes.metadix  apertium-tgk-pes.post-tgk.dix  apertium-tgk-pes.tgk-pes.alpha.dix  apertium-tgk-pes.tgk-pes.dix  apertium-tgk-pes.tgk.acx  apertium-tgk-pes.tgk.dix  apertium-tgk-pes.tgk.tsx  buscaPar.xsl  configure.ac  modes.xml  pending-tests.sh  regression-tests.sh  tgk-pes-unsupervised.make  wiki-tests.sh
dev/: README  count.tg-fa.dix  dix-to-wiki.py  fa.vtemplate.c.txt  fa.vtemplate.v.txt  myverbparadigms.txt  tg.hitparade.txt  tg.vtemplate.c.txt  tg.vtemplate.v.txt  udhr.en.txt  udhr.fa.txt  verbs.csv  verbs.fa.dix  verbs.ods  verbs.py
make-xmls/: README  verbs.csv  verbs.odt.ods  verbs.py
texts/: udhr.tgk.txt
tsts-nov19/: apertium-tg-fa.fa.metadix  apertium-tg-fa.tg.dix.xml  apertium-tg-fa.tg.metadix  buscaPar.xsl  principal-- (copie).xsl  principal.xsl  tobeAdded  xsl.sh
